# Norad-Defense-Sim

./: .gitignore  CMakeLists.txt  Makefile  QtSim.pro  Readme.md  all_code.txt  build.sh  detection.h  detection_system.cpp  detection_system.h  main  main.cpp  missile.cpp  missile.h  missile_controller.cpp  missile_controller.h  position.h  restucture.sh  run.sh  target.h
QtSim.app/Contents/: Info.plist
include/: detection_system.h  enemy_missile.h  interceptor_controller.h  interceptor_missile.h  missile.h  missile_controller.h  terminal_ui.h
src/: detection_system.cpp  enemy_missile.cpp  interceptor_controller.cpp  interceptor_missile.cpp  main.cpp  main_backup.cpp  missile.cpp  missile_controller.cpp  terminal_ui.cpp
tests/: CMakeLists.txt
